# uzi-robot

./: .gitignore  README.md  main.py  pyproject.toml  uzi-robot.service
scripts/: systemd-patch.sh
src/: audio.py  blink.py  brain.py  buggy_brain.py  display.py  gait.py  imu.py  led.py  main.py  pins.py  servos.py  stt.py  test.py  tts.py  util.py
src/misc/: servo_calibration.py
src/playground/: display.py  display_2.py  display_3.py  fish_stt.py  fish_stt_async.py  fish_tts_test.py  gait_viz.py  imu.py  imu_rvc.py  openrouter_test.py  pins.py  sherpa.py  tts_test.py
