[project]
name = "uzi-robot"
version = "0.1.0"
description = "Uzi from Murder Drones, but in real life (with less murdering)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-blinka>=9.1.0",
    "adafruit-circuitpython-bno08x>=1.3.3",
    "adafruit-circuitpython-pca9685>=3.4.22",
    "adafruit-circuitpython-servokit>=1.3.24",
    "dotenv>=0.9.9",
    "fish-audio-sdk>=1.3.0",
    "jetson-gpio>=2.1.12",
    "pyaudio>=0.2.14",
]
