[project]
name = "uzi-robot"
version = "0.1.0"
description = "Uzi from Murder Drones, but in real life (with less murdering)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-blinka>=9.1.0",
    "adafruit-circuitpython-bno08x>=1.3.3",
    "adafruit-circuitpython-bno08x-rvc>=1.0.24",
    "adafruit-circuitpython-pca9685>=3.4.22",
    "adafruit-circuitpython-rgb-display>=3.14.5",
    "adafruit-circuitpython-servokit>=1.3.24",
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "jetson-gpio>=2.1.12",
    "pillow>=12.2.0",
    "dotenv>=0.9.9",
    "fish-audio-sdk>=1.3.0",
    "pyaudio>=0.2.14",
    "soundfile>=0.13.1",
    "sherpa-onnx>=1.13.0",
    "sherpa-onnx-bin>=1.13.0",
    "sounddevice>=0.5.5",
    "requests>=2.33.1",
    "matplotlib>=3.10.9",
    "tornado>=6.5.5",
]
